--- a/index.html
+++ b/index.html
@@ -84,40 +84,75 @@
                           <div class="col-4">
                             <div class="m-2">
                                 <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid" alt="">
-                                <h6 class="text-center">Luxury sofa</h6>
-                                <p class="text-danger text-center">$600.00</p>            
+                                <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
+                                <p class="text-danger text-center fw-bold">$600.00</p>            
                             </div>
                           </div>
                           <div class="col-4">
-                            <div class="m-2">
+                            <div class="m-2 text-center">
                                 <img src="/public/img/products_mini/product-gloves.jpg" class="img-fluid" alt="">
+                                <h6 class="text-center fw-bold mt-4">Leather Gloves</h6>
+                                <span class="text-danger text-center fw-bold"><del class="text-secondary text-center">$34.OO</del>$27.00</span> 
                             </div>
                           </div>
                           <div class="col-4">
                             <div class="m-2">
                                 <img src="/public/img/products_mini/product-cups.jpg" class="img-fluid" alt="">
+                                <h6 class="text-center fw-bold mt-4">Colorful Bowl</h6>
+                                <p class="text-danger text-center fw-bold">$18.00</p>  
                             </div>
                           </div>
                         </div>
                         <!-- 2 eme row -->
                         <div class="row g-3">
                             <div class="col-4">
-                              <div class="m-2">
-                                  <img src="/public/img/products_mini/product-bag.jpg" class="img-fluid" alt="">            
+                              <div class="m-2 text-center">
+                                  <img src="/public/img/products_mini/product-bag.jpg" class="img-fluid" alt="">
+                                  <h6 class="text-center fw-bold mt-4">Womanen Bag</h6>
+                                  <span class="text-danger text-center fw-bold"><del class="text-secondary text-center">$420.OO</del>$350.00</span>           
                               </div>
                             </div>
                             <div class="col-4">
                               <div class="m-2">
                                   <img src="/public/img/products_mini/product-tshitr.jpg" class="img-fluid" alt="">
+                                  <h6 class="text-center fw-bold mt-4">Minimal T-Shirt</h6>
+                                  <p class="text-danger text-center fw-bold">$15.00</p>  
                               </div>
                             </div>
                             <div class="col-4">
                               <div class="m-2">
                                   <img src="/public/img/products_mini/product-plates.jpg" class="img-fluid" alt="">
+                                  <h6 class="text-center fw-bold mt-4">Plates Set</h6>
+                                  <p class="text-danger text-center fw-bold ">$30.00</p>  
                               </div>
                             </div>
                           </div>
-                      </div>                    
+                      </div> 
+                     <!-- 3 eme row -->
+                     <div class="row g-3">
+                      <div class="col-4">
+                        <div class="m-2">
+                            <img src="/public/img/products_mini/product-luxry-sofa.jpg" class="img-fluid" alt="">
+                            <h6 class="text-center fw-bold mt-4">Modern Sofa</h6>
+                            <p class="text-danger text-center fw-bold">$900.00</p>              
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="m-2">
+                            <img src="/public/img/products_mini/product-bed.jpg" class="img-fluid" alt="">
+                            <h6 class="text-center fw-bold mt-1 mt-4">Bed Linen</h6>
+                            <p class="text-danger text-center fw-bold">$79.00</p>  
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="m-2">
+                            <img src="/public/img/products_mini/product-shoes.jpg" class="img-fluid" alt="">
+                            <h6 class="text-center fw-bold mt-4">Minimal Shoes</h6>
+                            <p class="text-danger text-center fw-bold">$60.00</p>  
+                        </div>
+                      </div>
+                    </div>
+                </div>                    
                   </div>                  
               </div>
           </section>
