début footer fin section discover

--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="image1 tacos">
-                    <h3 class="border-bottom border-4 w-75 text-center text-white fw-bold">Sale Items</h3>
+                    <h3 class="border-bottom border-2 w-75 text-center text-white">Living Room</h3>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="image2 tacos">
-                    <h3 class="border-bottom border-4 w-75 text-center text-white fw-bold">Sale Items</h3>
+                    <h3 class="border-bottom border-2 w-75 text-center text-white">Sale Items</h3>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="image3 tacos">
-                    <h3 class=" border-bottom border-4 w-75 text-center text-white fw-bold">Sale Items</h3>
+                    <h3 class=" border-bottom border-2 w-75 text-center text-white">Clothes</h3>
                 </div>
               </div>  
             </div>
@@ -92,19 +92,19 @@
                 <h2 class="text-center mt-5 mb-5 fw-bold">Recent Products</h2>
                         <div class="row">
                           <div class="col-sm-4">
-                            <div class="avant monApres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                            <div class="avant apres">
+                                <img src="/public/img/products_mini/product-luxry-sofa.jpg" class="img-fluid my-images" alt="">        
                             </div>
                                 <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
                                 <p class="text-danger text-center fw-bold">$600.00</p>    
                           </div>
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-gloves.jpg" class="img-fluid my-images" alt="">        
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
                               <button type="button" class="btn btn-danger rounded-circle mt-4 "
-                                  style="height: 75px; width: 75px;">SALE!</button>
+                                  style="height: 70px; width: 70px;">SALE!</button>
                               <div class="ms-4">
                                   <p class="fw-bold text-center mt-4 d-block">Leather Gloves</p>
                                   <span class="text-center text-danger fw-bold "> <del class="text-secondary">$34.00</del>
@@ -114,45 +114,44 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-cups.jpg" class="img-fluid my-images" alt="">        
                             </div>
-                                <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
-                                <p class="text-danger text-center fw-bold">$600.00</p>    
+                                <h6 class="text-center fw-bold mt-4">Colorful Bowl</h6>
+                                <p class="text-danger text-center fw-bold">$18.00</p>    
                           </div>
                         </div>
                         <!-- 2 eme row -->
-                        <div class="row">
+                        <div class="row mt-5">
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
-                            </div>
-                                <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
-                                <p class="text-danger text-center fw-bold">$600.00</p>    
-                          </div>
-                          <div class="col-sm-4">
-                            <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-bag.jpg" class="img-fluid my-images" alt="">        
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
                               <button type="button" class="btn btn-danger rounded-circle mt-4 "
-                                  style="height: 75px; width: 75px;">SALE!</button>
+                                  style="height: 70px; width: 70px;">SALE!</button>
                               <div class="ms-4">
-                                  <p class="fw-bold text-center mt-4 d-block">Leather Gloves</p>
-                                  <span class="text-center text-danger fw-bold "> <del class="text-secondary">$34.00</del>
-                                      $27.00</span>
+                                  <p class="fw-bold text-center mt-4 d-block">Women Bag</p>
+                                  <span class="text-center text-danger fw-bold "> <del class="text-secondary">$420.00 </del>350.00</span>
                               </div>
                           </div>
+                        </div>
+                        <div class="col-sm-4">
+                          <div class="avant apres">
+                              <img src="/public/img/products_mini/product-tshitr.jpg" class="img-fluid my-images" alt="">        
                           </div>
+                              <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
+                              <p class="text-danger text-center fw-bold">$600.00</p>    
+                        </div>
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-plates.jpg" class="img-fluid my-images" alt="">        
                             </div>
                                 <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
                                 <p class="text-danger text-center fw-bold">$600.00</p>    
                           </div>
                         </div>
                         <!-- 3 eme row -->
-                        <div class="row">
+                        <div class="row mt-5">
                           <div class="col-sm-4">
                             <div class="avant apres">
                                 <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
@@ -162,21 +161,21 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-bed.jpg" class="img-fluid my-images" alt="">        
                             </div>
                             <div class="d-flex justify-content-center align-items-center">
                               <button type="button" class="btn btn-danger rounded-circle mt-4 "
                                   style="height: 75px; width: 75px;">SALE!</button>
                               <div class="ms-4">
                                   <p class="fw-bold text-center mt-4 d-block">Leather Gloves</p>
-                                  <span class="text-center text-danger fw-bold "> <del class="text-secondary">$34.00</del>
+                                  <span class="text-center text-danger fw-bold "> <del class="text-secondary">$34.00 </del>
                                       $27.00</span>
                               </div>
                           </div>
                           </div>
                           <div class="col-sm-4">
                             <div class="avant apres">
-                                <img src="/public/img/products_mini/product-modern-sofa.jpg" class="img-fluid my-images" alt="">        
+                                <img src="/public/img/products_mini/product-shoes.jpg" class="img-fluid my-images" alt="">        
                             </div>
                                 <h6 class="text-center fw-bold mt-4">Luxury sofa</h6>
                                 <p class="text-danger text-center fw-bold">$600.00</p>    
@@ -188,9 +187,16 @@
           </section>
           <!-- debut section avec image bg paralaxe -->
           <section>
-          
+            <div class="discover mt-5">
+              <div class="text-center pt-5">
+                <h3 class="text-white fw-bold discover-text ">Discover Thousands Of Great Products</h3>
+                <div class="discover-btn">
+                  <button type="button" class="btn btn-danger">LEARN MORE</button>
+                </div>
+              </div>
+            </div>
           </section>
-
+          <br><br><br><br><br><br><br><br><br><br>
     </main>
  <!-- Fin du Main-->
        
